--- a/Milestone3_Sources-Forms-and-Quantification-of-Bias-in-AI/M3_Theory_Supporting Notebook_CheatSheet.ipynb
+++ b/Milestone3_Sources-Forms-and-Quantification-of-Bias-in-AI/M3_Theory_Supporting Notebook_CheatSheet.ipynb
@@ -363,7 +363,7 @@
    "metadata": {},
    "source": [
     "The two worldviews are:\n",
-    "- Worldview \"What you see is what you get\" (WYSIWYG). This states that the observed space is essentially the same as the construct space, hence individuals can be directly compared using the observed features and labels. This re-joins the concept of Fairness Through Awareness, but also the Equality of Opportunity definitions of fairness where we just seek for the model to be equallt accurate or inaccurate for all groups. \n",
+    "- Worldview \"What you see is what you get\" (WYSIWYG). This states that the observed space is essentially the same as the construct space, hence individuals can be directly compared using the observed features and labels. This re-joins the concept of Fairness Through Awareness, but also the Equality of Opportunity definitions of fairness where we just seek for the model to be equally accurate or inaccurate for all groups. \n",
     "- Worldview \"We're all equal\" (WAE).  Here we assume that the observed space is not a good measure of the construct space as there exists structural bias. This re-joins the concept of Equaility of Outcome. \n",
     "\n",
     "The paper illustrates these two wordview using the SAT example:\n",
