--- a/Milestone3_Sources-Forms-and-Quantification-of-Bias-in-AI/M3_Theory_Supporting Notebook_CheatSheet.ipynb
+++ b/Milestone3_Sources-Forms-and-Quantification-of-Bias-in-AI/M3_Theory_Supporting Notebook_CheatSheet.ipynb
@@ -122,7 +122,7 @@
     "*   **Group fairness** : split a population into groups defined by protected attributes and seeks for some measure to be equal across groups.\n",
     "\n",
     "\n",
-    "Let's explicit a few definitions belonging to each of these category in the context of a binary classification problem (with outcome being 0-negative or 1-positive). Note that the names of the concepts are not universal and different papers might use different names. The names we use can be found in the two papers linked above, as well as in the IBM AIF360 demo website: https://aif360.mybluemix.net/. AIF360 is a python Fair-ML package that allows to quantify and mitigate bias. We will use it in Part 2 of this milestone. "
+    "Let's explicit a few definitions belonging to each of these category in the context of a binary classification problem (with outcome being 0-negative or 1-positive). Note that the names of the concepts are not universal and different papers might use different names. The names we use can be found in the two papers linked above, as well as in the holisticai library: https://github.com/holistic-ai/holisticai. Holisticai is a python Fair-ML package that allows to quantify and mitigate bias. We will use it in Part 2 of this milestone. "
    ]
   },
   {
@@ -260,7 +260,7 @@
     "id": "m6QLSWjcfCB-"
    },
    "source": [
-    "For the metrics in this part, one can refer to IBM AIF360 demo: https://aif360.mybluemix.net/data"
+    "For the metrics in this part, one can refer to the Holistic AI's library (documentation)[https://holisticai.readthedocs.io/en/latest/metrics.html#binary-classification] and (repo)[https://github.com/holistic-ai/holisticai].
    ]
   },
   {
