update images in M3-cheatsheet

--- a/Milestone3_Sources-Forms-and-Quantification-of-Bias-in-AI/M3_Theory_Supporting Notebook_CheatSheet.ipynb
+++ b/Milestone3_Sources-Forms-and-Quantification-of-Bias-in-AI/M3_Theory_Supporting Notebook_CheatSheet.ipynb
@@ -104,38 +104,32 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "SFdAACU0H7kM",
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
    "source": [
     "![](img/cheatsheet_img1.png)\n",
     "\n",
     "*Taken from*: Suresh, H., & Guttag, J. V. (2019). A framework for understanding unintended consequences of machine learning. arXiv preprint arXiv:1901.10002."
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   ],
    "metadata": {
-    "id": "R_zK3HXECVeE",
+    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   },
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "# 4 - Multitude of fairness"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   ],
    "metadata": {
-    "id": "t6UwiJYVCZhW",
+    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   },
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "\n",
     "We now give an overview of what constitutes fairness in the Fair-ML literature.  \n",
@@ -147,99 +141,99 @@
     "\n",
     "\n",
     "Let's explicit a few definitions belonging to each of these category in the context of a binary classification problem (with outcome being 0-negative or 1-positive). Note that the names of the concepts are not universal and different papers might use different names. The names we use can be found in the two papers linked above, as well as in the Holistic AI's library: https://www.holisticai.com/open-source. Holisticai is a python Fair-ML package that allows to quantify and mitigate bias. We will use it in Part 2 of this milestone."
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   ],
    "metadata": {
-    "id": "LgF3g-N2H7kR",
+    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   },
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "## 4.1. Individual fairness"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   ],
    "metadata": {
-    "id": "IRNZ6vYtH7kT",
+    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   },
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "### Fairness through Unawareness\n",
     "* **Definition:** \"An algorithm is fair as long as any protected attributes A are not explicitly used in the decision-making process\" (Mehrabi et al.,2021)\n",
     "* **Mathematically**: There is no other requirements than the absence of explicit protected attributes from the input features. \n",
     "* **Challenges/Uses in practice**: The presence of proxies in the data make this method often insufficient. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   ],
    "metadata": {
-    "id": "02_X-dgpH7kT",
+    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   },
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "### Fairness through Awareness (a.k.a. individual fairness)\n",
     "(Dwork et al., 2011) [Fairness Through Awareness](https://arxiv.org/pdf/1104.3913.pdf)\n",
     "* **Definition:** \"An algorithm is fair if it gives similar predictions to similar individuals\" (Mehrabi et al.,2021)\n",
     "* **Mathematically**:Two individuals $x, y$ are at distance $d(x, y) ∈ [0, 1]$. We consider a randomized classifier that maps individuals to probability distributions over outcomes (i.e., the individual $x$ will be classified as $0$ with a probability $p_x$ and as $1$ with a probability $1-x$). This definition of fairness imposes a Lipschitz condition that states that the statistical distance $D(M(x),M(y))$ between $M(x)$ and $M(y)$ must be at most $d(x, y)$ for all pairs of individuals $(x,y)$. \n",
     "* **Challenges/Uses in practice**: How can one choose a distance/similarity metric for individuals in the first place? (Dwork et al., 2011) states that: \"The similarity metric expresses ground truth. When ground truth is unavailable, the metric may reflect the “best” available approximation as agreed upon by society.\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   ],
    "metadata": {
-    "id": "Lez-J8cSH7kU",
+    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   },
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "###  Counterfactual fairness"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   ],
    "metadata": {
-    "id": "ZEIc4CSmH7kV",
+    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   },
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "(Kusner et al.,2017) [Counterfactual Fairness](https://arxiv.org/pdf/1703.06856.pdf)\n",
     "\n",
     "* **Definition**: Counterfactual fairness assumes that a causal graph between features and the predited output is known. The causal graph is counterfactuall fair if the predicted outcome does not depend on a descendant of the protected attribute. The intuition is that the decision would be the same in a counterfactual world where the individual belongs to a different demographic group, i.e., if we change the protected attribute whilst keeping the factors that are not causally dependent on it constant, this should not change the distribution of the predicted outcome.  \n",
     "\n",
     "* **Mathematically**: Let's assume we have a causal model such as the ones represented by the below directed acyclic graph (DAG) (taken from Kusner et al., 2017):"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   ],
    "metadata": {
-    "id": "EP6VZGImesID",
+    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   },
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "![](img/cheatsheet_img2.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   ],
    "metadata": {
-    "id": "fB5dqF_Aesdt",
+    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   },
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "with: <br>\n",
     "<center>$\n",
@@ -269,43 +263,49 @@
     "    This predictor would be counterfactually fair if $Y$ did not depend on a descendant of $A$, or in other words, if changing $A$ while holding $U$ did not impact $Y$. Here it is impacted as changing $A$ changes $X$ which in turns changes $Y$, hence it is not counterfactually fair. Intuitively, this makes sense as using the preference for red car as a measure of the accident rate will penalize the individuals of a certain race that prefer red cars. \n",
     "\n",
     "* **Challenges/Uses in practice**: Building a causal graph is not easy and can become very unpractical with a high number of features. Additionally, a correlation between features does not always imply causation and if it does, in what direction? If it doesn't, would the machine learning model not use that feature as if it did ?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   ],
    "metadata": {
-    "id": "ykE63bCSH7kW",
+    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   },
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "## 4.2. Group fairness"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   ],
    "metadata": {
-    "id": "kmYqcTDufJZN",
+    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   },
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "For the two following definitions, let's introduce an example with its confusion matrices. Let's take the example of a math exam with either pass or fail result. There are 100 candidates in total: 50 male and 50 female. We split the candidates in male and female candidates and obtain the following confusion matrices:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   ],
    "metadata": {
-    "id": "6jFkCsyiH7kX",
+    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   },
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "![](img/cheatsheet_img3.png)\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
