update milestone 3 exercise notebooks

--- a/Milestone3_Sources-Forms-and-Quantification-of-Bias-in-AI/notebooks/M3_Practice_3_Evaluate_fairness_metrics_with_holisticai.ipynb
+++ b/Milestone3_Sources-Forms-and-Quantification-of-Bias-in-AI/notebooks/M3_Practice_3_Evaluate_fairness_metrics_with_holisticai.ipynb
@@ -21,7 +21,7 @@
     "There are 4 practice notebooks in total (current one in red):\n",
     "1. Explore given data to: detect potential bias early & check for proxies \n",
     "2. Evaluate model bias \"manually\"\n",
-    "3. <font color='red'> **Evaluate model bias using **holisticai** library**</font>\n",
+    "3. <font color='red'> **Evaluate model bias using holisticai library**</font>\n",
     "4. Example code to get confidence intervals for a metric (nothing to do)\n",
     "\n",
     "Instructions to complete in each parts are in bold. Intermediate results are given so one can continue the exercise. \n",
