fix cheatsheet formatting

--- a/Milestone3_Sources-Forms-and-Quantification-of-Bias-in-AI/M3_Theory_SupportingNotebook_CheatSheet.ipynb
+++ b/Milestone3_Sources-Forms-and-Quantification-of-Bias-in-AI/M3_Theory_SupportingNotebook_CheatSheet.ipynb
@@ -66,8 +66,7 @@
    "source": [
     "One can refer to the two following papers for details on the different possible bias encountered:\n",
     "- (Mehrabi et al., 2021) : [A survey on bias and fairness in machine learning](https://arxiv.org/pdf/1908.09635.pdf)\n",
-    "- (Suresh & Guttag, 2019) : [ A Framework for Understanding Sources of Harm\n",
-    "throughout the Machine Learning Life Cycle](https://arxiv.org/pdf/1901.10002.pdf)"
+    "- (Suresh & Guttag, 2019) : [A Framework for Understanding Sources of Harm throughout the Machine Learning Life Cycle](https://arxiv.org/pdf/1901.10002.pdf)"
    ]
   },
   {
