fix cheatsheet formatting

--- a/Milestone3_Sources-Forms-and-Quantification-of-Bias-in-AI/M3_Theory_SupportingNotebook_CheatSheet.ipynb
+++ b/Milestone3_Sources-Forms-and-Quantification-of-Bias-in-AI/M3_Theory_SupportingNotebook_CheatSheet.ipynb
@@ -90,7 +90,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](img/cheatsheet_img1.png)\n",
+    "<img src=\"img/cheatsheet_img1.png\" style=\"margin-left:auto; margin-right:auto\"/>\n",
+    "\n",
     "\n",
     "*Taken from*: Suresh, H., & Guttag, J. V. (2019). A framework for understanding unintended consequences of machine learning. arXiv preprint arXiv:1901.10002."
    ]
@@ -168,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](img/cheatsheet_img2.png)"
+    "<img src=\"img/cheatsheet_img2.png\" style=\"margin-left:auto; margin-right:auto\"/>"
    ]
   },
   {
