--- a/Milestone3_Sources-Forms-and-Quantification-of-Bias-in-AI/M3_Theory_SupportingNotebook_CheatSheet.ipynb
+++ b/Milestone3_Sources-Forms-and-Quantification-of-Bias-in-AI/M3_Theory_SupportingNotebook_CheatSheet.ipynb
@@ -178,16 +178,21 @@
    "source": [
     "with: <br>\n",
     "\n",
-    "<img src=\"img/cheatsheet_eq1.png\" style=\"margin-left:auto; margin-right:auto\"/>\n",
+    "$$\n",
+    "\\left\\{\n",
+    "  \\begin{aligned}\n",
+    "    A = \\text{protected attributes}\\\\\n",
+    "    X = \\text{remaining attributes} \\\\\n",
+    "    Y = \\text{predicted output} \\\\\n",
+    "    V = A \\cup X = \\text{observable variables} \\\\\n",
+    "    U = \\text{latent background variables not caused by V} \\\\\n",
+    "  \\end{aligned}\n",
+    "\\right. $$\n",
     "<br>\n",
-    "\n",
-    "Predictor $\\hat{Y}$ is counterfactually fair if under any context $X = x$ and $A = a$: <br><br>\n",
-    "$\n",
-    "\\begin{align}\n",
+    "Predictor $\\hat{Y}$ is counterfactually fair if under any context $X = x$ and $A = a$:\n",
+    "<center>$\n",
     "P(\\hat{Y}_{A←a} (U) = y | X = x, A = a) = P(\\hat{Y}_{A←a'} (U) = y | X = x, A = a),\n",
-    "\\end{align}\n",
-    "$\n",
-    "<br>\n",
+    "$ </center> <br>\n",
     "for all $y$ and for any value $a'$ attainable by $A$.\n",
     "\n",
     "* **Illustration**: We take here directly the example given in (Kusner et al.,2017) which can be represented using the DAG on the right from above. A car insurance company predicts the accident rate of individuals $Y$. We have:\n",
