fix cheatsheet formatting

--- a/Milestone3_Sources-Forms-and-Quantification-of-Bias-in-AI/M3_Theory_SupportingNotebook_CheatSheet.ipynb
+++ b/Milestone3_Sources-Forms-and-Quantification-of-Bias-in-AI/M3_Theory_SupportingNotebook_CheatSheet.ipynb
@@ -189,10 +189,11 @@
     "  \\end{aligned}\n",
     "\\right. $$\n",
     "<br>\n",
-    "Predictor $\\hat{Y}$ is counterfactually fair if under any context $X = x$ and $A = a$:\n",
-    "<center>$\n",
+    "Predictor $\\hat{Y}$ is counterfactually fair if under any context $X = x$ and $A = a$: <br> <br>\n",
+    "$$\n",
     "P(\\hat{Y}_{A←a} (U) = y | X = x, A = a) = P(\\hat{Y}_{A←a'} (U) = y | X = x, A = a),\n",
-    "$ </center> <br>\n",
+    "$$\n",
+    "<br>\n",
     "for all $y$ and for any value $a'$ attainable by $A$.\n",
     "\n",
     "* **Illustration**: We take here directly the example given in (Kusner et al.,2017) which can be represented using the DAG on the right from above. A car insurance company predicts the accident rate of individuals $Y$. We have:\n",
@@ -225,7 +226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](img/cheatsheet_img3.png)\n"
+    "<img src=\"img/cheatsheet_img3.png\" style=\"margin-left:auto; margin-right:auto\"/>\n"
    ]
   },
   {
