fix cheatsheet formatting

--- a/Milestone3_Sources-Forms-and-Quantification-of-Bias-in-AI/M3_Theory_SupportingNotebook_CheatSheet.ipynb
+++ b/Milestone3_Sources-Forms-and-Quantification-of-Bias-in-AI/M3_Theory_SupportingNotebook_CheatSheet.ipynb
@@ -205,7 +205,7 @@
     "    \n",
     "    This predictor would be counterfactually fair if $Y$ did not depend on a descendant of $A$, or in other words, if changing $A$ while holding $U$ did not impact $Y$. Here it is impacted as changing $A$ changes $X$ which in turns changes $Y$, hence it is not counterfactually fair. Intuitively, this makes sense as using the preference for red car as a measure of the accident rate will penalize the individuals of a certain race that prefer red cars. \n",
     "\n",
-    "* **Challenges/Uses in practice**: Building a causal graph is not easy and can become very unpractical with a high number of features. Additionally, a correlation between features does not always imply causation and if it does, in what direction? If it doesn't, would the machine learning model not use that feature as if it did ?"
+    "* **Challenges/Uses in practice**: Building a causal graph is not easy and can become very unpractical with a high number of features. Additionally, a correlation between features does not always imply causation and if it does, in what direction? If it doesn't, would the machine learning model not use that feature as if it did?"
    ]
   },
   {
@@ -270,10 +270,11 @@
    "source": [
     "###  Equality of Opportunity :  Equalised Odds\n",
     "- **Definition:** The probability of a person in the positive class being correctly assigned a positive outcome and the probability of a person in a negative class being incorrectly assigned a positive outcome should both be the same for the privileged and unprivileged group members (for instance male and female).\n",
-    "- **Mathematically**: (Mehrabi et al.,2021): \"A predictor $\\hat{Y}$ satisfies equalized odds with respect to protected attribute $A$ and outcome $Y$, if $\\hat{Y}$ and $A$ are independent conditional on $Y$. <center>$\n",
-    "P(\\hat{Y}=1|A=0,Y =y) = P(\\hat{Y}=1|A=1,Y =y) , y ∈\\{0,1\\} \"\n",
-    "$ </center> <br>\n",
-    "Note that: \n",
+    "- **Mathematically**: (Mehrabi et al.,2021): \"A predictor $\\hat{Y}$ satisfies equalized odds with respect to protected attribute $A$ and outcome $Y$, if $\\hat{Y}$ and $A$ are independent conditional on $Y$.\"\n",
+    "$$\n",
+    "P(\\hat{Y}=1|A=0,Y =y) = P(\\hat{Y}=1|A=1,Y =y) , y ∈\\{0,1\\}\n",
+    "$$\n",
+    "    Note that:\n",
     "    - $P(\\hat{Y}=1|A=a,Y=0)$ can be estimated using the False Positive Rate (FPR) in a specific problem, i.e. the proportion of positive prediction for individuals that actually have a negative outcome. We have $FPR = \\frac{FP}{FP+TN}$.\n",
     "    - $P(\\hat{Y}=1|A=a,Y=1)$ can be estimated using the True Positive Rate (TPR), i.e. the proportion of positive prediction for individuals that actually have a positive outcome. We have $TPR = \\frac{TP}{FN+TP}$.\n",
     "- **Specific Metrics**: There are different metrics for this same concept, we present two common ones:\n",
