fix cheatsheet formatting

--- a/Milestone3_Sources-Forms-and-Quantification-of-Bias-in-AI/M3_Theory_SupportingNotebook_CheatSheet.ipynb
+++ b/Milestone3_Sources-Forms-and-Quantification-of-Bias-in-AI/M3_Theory_SupportingNotebook_CheatSheet.ipynb
@@ -251,13 +251,13 @@
     "     - **Statistical parity** measures the difference in success rates: $SP= SR_0 - SR_1$. The ideal value is 0.\n",
     "     - **Disparate impact** measures the ratio: $DI = \\frac{SR_0}{SR_1}$. The ideal value is 1. Fair values are usually considered to be between 0.8 ans 1.2.\n",
     "- **Illustration**: In the above example, there are 37 Male candidates predicted to pass against 26 Female candidates out of 50 for each. We have $SR_m= 0.74$ and $SR_f=0.52$, which gives: <br>\n",
-    "<center>$\n",
+    "$$\n",
     "\\left\\{ \n",
     "  \\begin{aligned}\n",
     "    SP = 0.52-0.74 = -0.22\\\\\n",
     "    DI = 0.52/0.74 = 0.7 \n",
     "  \\end{aligned}\n",
-    "\\right. $ </center>\n",
+    "\\right. $$\n",
     "\n",
     "- **Challenges/Uses in practice**: In practice, there might be historical (or other) biases which leads to an uneven success rate across different groups (e.g. more white males as CEO than dark-skinned or female individuals). The problem might be more a societal one than on of the algorithm, and solving it within the algorithm remit might means introducing positive discrimination, which asks sensitive societal and legal questions. For instance in hiring, this migh lead to \"more qualified\" privileged candidates being refused opportunities to the advantage of \"less qualified\" unprivileged candidates."
    ]
@@ -282,13 +282,13 @@
     "     - **Equal Opportunity Difference**: $EOD = TPR_{0}- TPR_{1}$ <br>\n",
     "    where 0 represents the unprivileged group and 1 the privileged one. For both metrics, the ideal value is 0 and fair values are considered between -0.1 and 0.1.\n",
     "- **Illustration**: In the above example, we have $FPR_{male} = \\frac{FP}{FP+TN}= \\frac{7}{17} = 0.41$; $TPR_{male} = \\frac{TP}{FN+TP}= \\frac{30}{33} = 0.91$;   $FPR_{female}= \\frac{4}{22} = 0.18$ ,$TPR_{female}= \\frac{22}{28} = 0.79$, hence we have:\n",
-    "<center>$\n",
+    "$$\n",
     "\\left\\{ \n",
     "  \\begin{aligned}\n",
     "    AOD = \\frac{1}{2} [(0.18-0.41)+(0.79-0.91)] = -0.175 \\\\\n",
     "    EOD = 0.79-0.91 = -0.12 \n",
     "  \\end{aligned}\n",
-    "\\right. $ </center>\n",
+    "\\right. $$\n",
     "\n",
     "- **Challenges/Uses in practice**: This assumes that the ground-truth label is observed and unbiased for all individuals. In hiring for instance, the best available ground-truth label might be biased or unobserved, for instance it isimpossible to know if all historically rejected candidates would have been good employees.\n"
    ]
