fix cheatsheet formatting

--- a/Milestone3_Sources-Forms-and-Quantification-of-Bias-in-AI/M3_Theory_SupportingNotebook_CheatSheet.ipynb
+++ b/Milestone3_Sources-Forms-and-Quantification-of-Bias-in-AI/M3_Theory_SupportingNotebook_CheatSheet.ipynb
@@ -270,11 +270,8 @@
    "source": [
     "###  Equality of Opportunity :  Equalised Odds\n",
     "- **Definition:** The probability of a person in the positive class being correctly assigned a positive outcome and the probability of a person in a negative class being incorrectly assigned a positive outcome should both be the same for the privileged and unprivileged group members (for instance male and female).\n",
-    "- **Mathematically**: (Mehrabi et al.,2021): \"A predictor $\\hat{Y}$ satisfies equalized odds with respect to protected attribute $A$ and outcome $Y$, if $\\hat{Y}$ and $A$ are independent conditional on $Y$.\"\n",
-    "$$\n",
-    "P(\\hat{Y}=1|A=0,Y =y) = P(\\hat{Y}=1|A=1,Y =y) , y ∈\\{0,1\\}\n",
-    "$$\n",
-    "    Note that:\n",
+    "- **Mathematically**: (Mehrabi et al.,2021): \"A predictor $\\hat{Y}$ satisfies equalized odds with respect to protected attribute $A$ and outcome $Y$, if $\\hat{Y}$ and $A$ are independent conditional on $Y$.\", i.e.\n",
+    "    $ P(\\hat{Y}=1|A=0,Y =y) = P(\\hat{Y}=1|A=1,Y =y) , y ∈\\{0,1\\} $\n",
     "    - $P(\\hat{Y}=1|A=a,Y=0)$ can be estimated using the False Positive Rate (FPR) in a specific problem, i.e. the proportion of positive prediction for individuals that actually have a negative outcome. We have $FPR = \\frac{FP}{FP+TN}$.\n",
     "    - $P(\\hat{Y}=1|A=a,Y=1)$ can be estimated using the True Positive Rate (TPR), i.e. the proportion of positive prediction for individuals that actually have a positive outcome. We have $TPR = \\frac{TP}{FN+TP}$.\n",
     "- **Specific Metrics**: There are different metrics for this same concept, we present two common ones:\n",
@@ -299,7 +296,7 @@
     "id": "WPB2uV50H7kZ"
    },
    "source": [
-    "# 5 - Which definition to choose ? "
+    "    # 5 - Which definition to choose ?"
    ]
   },
   {
@@ -328,7 +325,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](img/cheatsheet_img4.png)"
+    "<img src=\"img/cheatsheet_img4.png\" style=\"margin-left:auto; margin-right:auto\"/>"
    ]
   },
   {
@@ -341,15 +338,8 @@
     "\n",
     "The paper illustrates these two wordview using the SAT example:\n",
     "- \"Worldview says that the score correlates well with future success and there is a way to use the score to correctly compare the abilities of applicants\". -> use equality of opportunity metrics such as Average Odds Difference. \n",
-    "- \"Worldview says that the SAT score may contain structural biases so its distribution being different across groups should not be mistaken for a difference in distribution in ability.\" -> use equality of outcome metrics such as Disparate Impact. "
+    "- \"Worldview says that the SAT score may contain structural biases so its distribution being different across groups should not be mistaken for a difference in distribution in ability.\" -> use equality of outcome metrics such as Disparate Impact."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
