fix cheatsheet formatting

--- a/Milestone3_Sources-Forms-and-Quantification-of-Bias-in-AI/M3_Theory_SupportingNotebook_CheatSheet.ipynb
+++ b/Milestone3_Sources-Forms-and-Quantification-of-Bias-in-AI/M3_Theory_SupportingNotebook_CheatSheet.ipynb
@@ -292,12 +292,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "WPB2uV50H7kZ"
-   },
    "source": [
-    "    # 5 - Which definition to choose ?"
-   ]
+    "# 5 - Which definition to choose ?"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
