fix cheatsheet formatting

--- a/Milestone5_Trade-offs-and-Interactions-of-Bias-and-Discrimination-with-other-verticals-in-Trustworthy-AI/Milestone5_Theory_Supporting Notebook_CheatSheet.ipynb
+++ b/Milestone5_Trade-offs-and-Interactions-of-Bias-and-Discrimination-with-other-verticals-in-Trustworthy-AI/Milestone5_Theory_Supporting Notebook_CheatSheet.ipynb
@@ -23,15 +23,15 @@
    "source": [
     "Fairness is just one aspect of what is commonly called \"Trustworthy AI\". The [European Commision guidelines for Trustworthy AI](https://digital-strategy.ec.europa.eu/en/library/ethics-guidelines-trustworthy-ai) defines a non-exhaustive lists of requirements for trustworthy AI, illustrated on the figure below:\n",
     "\n",
-    "![image.png](attachment:image.png)\n",
+    "<img src=\"img/cheatsheet_img1.png\" style=\"margin-left:auto; margin-right:auto\"/>\n",
     "\n",
     "In this milestone, apart from Fairness which is the main subject of the course, we will consider 3 other verticals of trustworthy AI:   \n",
     "- **Explainability**: Quality of a system to be safe, not vulnerable to tampering.\n",
     "- **Robustness**: Quality of a system to avoid unfair treatment of individuals or organizations.\n",
     "- **Privacy**: Quality of a system to provide decisions or suggestions that can be understood by their users and developers.\n",
     "\n",
-    "![image-2.png](attachment:image-2.png)\n",
-    "*Image from [Koshiyama et al.,2021](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3778998)*\n",
+    "<img src=\"img/cheatsheet_img2.png\" style=\"margin-left:auto; margin-right:auto\"/>\n",
+    "Image from [Koshiyama et al.,2021](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3778998)\n",
     "\n",
     "These subfields of ethical AI are often studied in isolation, but a growing literature is focusing on how they interact with one another. This is a very important field of research as ultimately, a trustworthy AI system needs to adhere to all these principles at once, even though they sometimes contradict each other. This milestone explores some of these interactions. "
    ]
@@ -108,7 +108,7 @@
    "id": "9e8eb038",
    "metadata": {},
    "source": [
-    "![image.png](attachment:image.png)\n",
+    "<img src=\"img/cheatsheet_img3.png\" style=\"margin-left:auto; margin-right:auto\"/>\n",
     "*Figure by [(Koshiyama et al., 2021)](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3778998). Types and levels of Algorithm Explainability.*"
    ]
   },
@@ -154,11 +154,11 @@
     "\n",
     "To develop an intuition of it, we use here an illustration heavily adapted from [this page](https://towardsdatascience.com/tagged/shapley-values?p=5a2a271ed9c3). Imagine we have 4 friends (A,B,C,D) working together for a profit $p$. How can we decide what contribution each person had in order to share the profit fairly? We can see the marginal contribution of person D by calculating the profit with and without them as shown in the figure below.\n",
     "\n",
-    "![image-4.png](attachment:image-4.png)\n",
+    "<img src=\"img/cheatsheet_img4.png\" style=\"margin-left:auto; margin-right:auto\"/>\n",
     "\n",
     "\n",
     "We can do this for \"all possible coalitions\" as pictured below.\n",
-    "![image-5.png](attachment:image-5.png)\n",
+    "<img src=\"img/cheatsheet_img5.png\" style=\"margin-left:auto; margin-right:auto\"/>\n",
     "\n",
     "\n",
     "The shapley value for person D is therefore:\n",
@@ -247,7 +247,7 @@
     "\n",
     "The following table gives a (non-exhaustive) overview of the privacy threats and possible defenses throughouth the system's lifecycle. \n",
     "\n",
-    "![image-3.png](attachment:image-3.png)"
+    "<img src=\"img/cheatsheet_img6.png\" style=\"margin-left:auto; margin-right:auto\"/>"
    ]
   },
   {
@@ -301,7 +301,7 @@
    "id": "6566f07d",
    "metadata": {},
    "source": [
-    "![image.png](attachment:image.png)"
+    "<img src=\"img/cheatsheet_img7.png\" style=\"margin-left:auto; margin-right:auto\"/>"
    ]
   },
   {
@@ -349,7 +349,7 @@
    "id": "ebdf31aa",
    "metadata": {},
    "source": [
-    "![image.png](attachment:image.png)"
+    "<img src=\"img/cheatsheet_img8.png\" style=\"margin-left:auto; margin-right:auto\"/>"
    ]
   },
   {
@@ -375,7 +375,7 @@
    "id": "0fb4b06b",
    "metadata": {},
    "source": [
-    "![image.png](attachment:image.png)"
+    "<img src=\"img/cheatsheet_img9.png\" style=\"margin-left:auto; margin-right:auto\"/>"
    ]
   },
   {
@@ -453,7 +453,7 @@
    "id": "f367437a",
    "metadata": {},
    "source": [
-    "![image.png](attachment:image.png)\n",
+    "<img src=\"img/cheatsheet_img10.png\" style=\"margin-left:auto; margin-right:auto\"/>\n",
     "<center><i>From Goodfellow et al., Explaining and Harnessing Adversarial Examples</i></center>"
    ]
   },
@@ -503,7 +503,7 @@
    "id": "dd184024",
    "metadata": {},
    "source": [
-    "![image.png](attachment:image.png)\n",
+    "<img src=\"img/cheatsheet_img11.png\" style=\"margin-left:auto; margin-right:auto\"/>\n",
     "<center><i>Koshiyama et al., Towards Algorithm Auditing</i></center>"
    ]
   },
@@ -526,7 +526,7 @@
    "id": "96b53bf3",
    "metadata": {},
    "source": [
-    "![image.png](attachment:image.png)\n",
+    "<img src=\"img/cheatsheet_img12.png\" style=\"margin-left:auto; margin-right:auto\"/>\n",
     "<center><i>Koshiyama et al., Towards Algorithm Auditing</i></center>"
    ]
   }
