fix cheatsheet formatting

--- a/Milestone5_Trade-offs-and-Interactions-of-Bias-and-Discrimination-with-other-verticals-in-Trustworthy-AI/Milestone5_Theory_Supporting Notebook_CheatSheet.ipynb
+++ b/Milestone5_Trade-offs-and-Interactions-of-Bias-and-Discrimination-with-other-verticals-in-Trustworthy-AI/Milestone5_Theory_Supporting Notebook_CheatSheet.ipynb
@@ -35,6 +35,12 @@
     "<figcaption>Image from [Koshiyama et al.,2021](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3778998)</figcaption>\n",
     "</figure>\n",
     "\n",
+    "```{figure} img/cheatsheet_img2.png\n",
+    "---\n",
+    "name: img2\n",
+    "---\n",
+    "Image from [Koshiyama et al.,2021](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3778998)\n",
+    "```\n",
     "\n",
     "These subfields of ethical AI are often studied in isolation, but a growing literature is focusing on how they interact with one another. This is a very important field of research as ultimately, a trustworthy AI system needs to adhere to all these principles at once, even though they sometimes contradict each other. This milestone explores some of these interactions. "
    ]
