--- a/Milestone5_Trade-offs-and-Interactions-of-Bias-and-Discrimination-with-other-verticals-in-Trustworthy-AI/Milestone5_Theory_Supporting Notebook_CheatSheet.ipynb
+++ b/Milestone5_Trade-offs-and-Interactions-of-Bias-and-Discrimination-with-other-verticals-in-Trustworthy-AI/Milestone5_Theory_Supporting Notebook_CheatSheet.ipynb
@@ -30,10 +30,9 @@
     "- **Robustness**: Quality of a system to avoid unfair treatment of individuals or organizations.\n",
     "- **Privacy**: Quality of a system to provide decisions or suggestions that can be understood by their users and developers.\n",
     "\n",
-    "<figure>\n",
     "<img src=\"img/cheatsheet_img2.png\" style=\"margin-left:auto; margin-right:auto\"/>\n",
-    "<figcaption align = \"center\">Image from [Koshiyama et al.,2021](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3778998)</figcaption>\n",
-    "</figure>\n",
+    "\n",
+    "Image from [Koshiyama et al.,2021](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3778998)\n",
     "\n",
     "These subfields of ethical AI are often studied in isolation, but a growing literature is focusing on how they interact with one another. This is a very important field of research as ultimately, a trustworthy AI system needs to adhere to all these principles at once, even though they sometimes contradict each other. This milestone explores some of these interactions. "
    ]
@@ -111,7 +110,8 @@
    "metadata": {},
    "source": [
     "<img src=\"img/cheatsheet_img3.png\" style=\"margin-left:auto; margin-right:auto\"/>\n",
-    "*Figure by [(Koshiyama et al., 2021)](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3778998). Types and levels of Algorithm Explainability.*"
+    "\n",
+    "Figure by [(Koshiyama et al., 2021)](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3778998). Types and levels of Algorithm Explainability."
    ]
   },
   {
