fix cheatsheet formatting

--- a/Milestone5_Trade-offs-and-Interactions-of-Bias-and-Discrimination-with-other-verticals-in-Trustworthy-AI/Milestone5_Theory_Supporting Notebook_CheatSheet.ipynb
+++ b/Milestone5_Trade-offs-and-Interactions-of-Bias-and-Discrimination-with-other-verticals-in-Trustworthy-AI/Milestone5_Theory_Supporting Notebook_CheatSheet.ipynb
@@ -456,7 +456,7 @@
    "metadata": {},
    "source": [
     "<img src=\"img/cheatsheet_img10.png\" style=\"margin-left:auto; margin-right:auto\"/>\n",
-    "<center><i>From Goodfellow et al., Explaining and Harnessing Adversarial Examples</i></center>"
+    "<p align=\"center\"><i>From Goodfellow et al., Explaining and Harnessing Adversarial Examples</i></p>"
    ]
   },
   {
@@ -506,7 +506,7 @@
    "metadata": {},
    "source": [
     "<img src=\"img/cheatsheet_img11.png\" style=\"margin-left:auto; margin-right:auto\"/>\n",
-    "<center><i>Koshiyama et al., Towards Algorithm Auditing</i></center>"
+    "<p align=\"center\"><i>Koshiyama et al., Towards Algorithm Auditing</i></p>"
    ]
   },
   {
@@ -529,8 +529,17 @@
    "metadata": {},
    "source": [
     "<img src=\"img/cheatsheet_img12.png\" style=\"margin-left:auto; margin-right:auto\"/>\n",
-    "<center><i>Koshiyama et al., Towards Algorithm Auditing</i></center>"
+    "<p align=\"center\"><i>Koshiyama et al., Towards Algorithm Auditing</i></p>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
